# brainfuck

./: Cargo.toml  README.md
programs/: hello_world.bf  number_crunch.bf  trivial_loop.bf
src/: bf.rs  bytecode_bf.rs  jit_utils.rs  lib.rs  llvm_jit.rs  main.rs  optbytecode_jit.rs  parser.rs  simple_jit.rs
