[package]
name = "bf_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="main"
path="src/main.rs"

[dependencies]
nix = "0.23.1"
dynasmrt = "1.2.1"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys-160 = { package = "llvm-sys", version = "160", features = ["prefer-dynamic"] }
